# my_portfolio

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  docker-compose.local.yml  docker-compose.yml  fix: docker compose commands in README.md  index.html  index.xml  sitemap.xml
.github/workflows/: cicd.yml
about/: index.html  index.xml
about/page/1/: index.html
achievements/: index.html  index.xml
achievements/page/1/: index.html
backend/: .dockerignore  Dockerfile  README.md  conftest.py  entrypoint.sh  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements.txt
backend/api/: admin.py  apps.py  chromadb_utils.py  models.py  serializers.py  signals.py  tests.py  throttles.py  urls.py  utils.py  views.py
backend/api/management/commands/: create_missing_tables.py  index_content.py
backend/api/migrations/: 0001_initial.py  0002_contactmessage_experience_resume_tag_visitorcount_and_more.py  0002_contactmessage_resume_tag_visitorcount_and_more.py  0003_chatsession_chatmessage.py  0004_dailyvisitorcount_totalvisitorcount_and_more.py  0004_remove_project_code_snippet_and_more.py  0005_dailyvisitorcount_totalvisitorcount_and_more.py
backend/core/: settings.py  test_settings.py  urls.py
categories/: index.html  index.xml
certifications/: index.html  index.xml
certifications/page/1/: index.html
contact/: index.html  index.xml
contact/page/1/: index.html
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatbotWidget.tsx  Footer.tsx  Navbar.css  Navbar.tsx  ProjectList.css  ProjectList.tsx  Resume.css  Resume.tsx  SkillsSection.css  SkillsSection.tsx
post/: index.html  index.xml
post/project-1/: index.html
post/project-2/: index.html
post/project-3/: index.html
post/project-4/: index.html
post/project-5/: index.html
post/project-6/: index.html
post/project-7/: index.html
publications/: index.html  index.xml
tags/: index.html  index.xml
(+33 files in other folders)
